Fixed overflowing morph dropdown

--- a/css/editor.css
+++ b/css/editor.css
@@ -41,7 +41,7 @@
 }
 
 div.morph .menu {
-    width: 12rem;
+    width: 14rem;
 }
 
 div.right.action div.buttons {
